# agent-project

./: .gitignore  README.md  app.py  md5.txt  pyproject.toml
agent/: react_agent.py
agent/tools/: agent_tools.py  middleware.py
chroma_db/: chroma.sqlite3
config/: agent.yml  chroma.yml  prompts.yml
data/: test.txt
model/: factory.py
prompts/: main_prompt.txt
rag/: rag_service.py  vector_store.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
